Changes 3.x (xxxx)
==================

UPDATE:
- CodeIgniter 3.0
- CodeIgniter 3.0.1


NEW:
- Update tool: admin/update
- $_GET is always on now
- Unit met PPHunit (en CIunit verwijderd)

CHANGED:
- MY_Pagination has now own config file site/config/pagination.php for template settings

REMOVED:
- build tool
- less libraries
- bulk_upload
- old_menu & old_form
- old jQuery files


Changes 3063
============

NEW:
- FlexyAdmin has now a generic API (../_api) for admin and frontend purposes, see the userguide
- All standard plugins moved to a new folder plugins and updated
- cfg_email is now standard in de database (and login uses it always now!)
- new routings: _media/.. & _media/download/.. (.. = path/file)
- MY_Upload checks orientation of uploaded files and resets them if needed

MYSQL:
- cfg_email_r2883.sql & update_r2812.sql & update_r2833.sql

PLUGINS:
- All standard plugins moved to a new folder plugins and updated
- admin/plugin/install_plugin & admin/plugin/create_plugin changed

UPDATE:
- CodeIgniter 2.2.2

FRONTEND:
- Moved module/library methods from controller to MY_frontendcontroller
- A special module 'before_controller' is set and can be used for code to do on every page
- mobile theme changed / Fontawsome standard included

USERGUIDE:
- Jiros aanpassingen
- Makkelijk Glyphicons in userguide zetten: {glyphicon-type}
- API

NEW:
- Form_validation->valid_option(), and added option validation to validate_data()
- plugin_remove_relation_table
- Adding MY_form_validation->validate_data() to validate a data array (before inserting/updating with API for example)
- sort_keys() to MY_array_helper()
- DB->where() aangepast zodat als tweede argument een array is where_in() wordt aangeroepen
- db->table_status()
- FILE_types_sound to config
- cfg_table_info.b_form_add_many om te kunnen instellen of in een form van een tabel many data getoond mag worden
- ui->set_item() om een specifiek item in cfg_ui on the fly aan te passen